--- a/create.html
+++ b/create.html
@@ -43,11 +43,17 @@
     </div>
 </nav>
 
-<main class="container">
+<main class="container" id="app">
     <div class="bg-light p-5 rounded">
         <h1>Создать тест</h1>
     </div>
+
+    {{ message }}
+
 </main>
+
+<script src="vue.min.js"></script>
+<script src="app.create.js"></script>
 
 </body>
 </html>
