--- a/create.html
+++ b/create.html
@@ -114,11 +114,28 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <div class="form-floating">
+                        <textarea class="form-control" placeholder="Leave a comment here"
+                                  id="floatingTextarea" v-model="modalQuestion.text"></textarea>
+                        <label for="floatingTextarea">Текст вопроса</label>
+                    </div>
+                    <div>
+                        <p>Варианты ответа</p>
+                        <div v-for="(answer, index) in modalQuestion.answers">
+                            {{ answer.text }}
+                        </div>
+                        <div v-if="isAddNewAnswer">
+                            <input type="text" v-model="newAnswer">
+                            <button class="btn btn-primary" v-on:click="saveNewAnswer()">Сохранить</button>
+                        </div>
+                        <button v-if="!isAddNewAnswer" class="btn btn-primary" v-on:click="isAddNewAnswer = true">
+                            Добавить вариант ответа
+                        </button>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" v-on:click="saveNewQuestion()">Save changes</button>
                 </div>
             </div>
         </div>
