--- a/create.html
+++ b/create.html
@@ -62,7 +62,7 @@
     <div v-for="(question, questionIndex) in testData.questions">
         <p>
             {{ questionIndex + 1}}. {{question.text}}
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" v-on:click="editQuestion(questionIndex)">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                      class="bi bi-pencil-square" viewBox="0 0 16 16">
                     <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
@@ -81,8 +81,22 @@
         </button>
         </p>
 
-        <div v-for="answer in question.answers">
-            {{ answer.text }}
+        <div class="form-check">
+            <div v-for="answer in question.answers" v-if="question.questionType === questionType.radio">
+                <input class="form-check-input" type="radio" disabled :checked="answer === question.trueAnswer">
+                <label class="form-check-label">
+                    {{ answer }}
+                </label>
+            </div>
+
+            <div v-for="answer in question.answers" v-if="question.questionType === questionType.check">
+                <input class="form-check-input" type="checkbox" disabled :checked="question.trueAnswer.indexOf(answer) !== -1">
+                <label class="form-check-label">
+                    {{ answer }}
+                </label>
+            </div>
+
+            <input type="text" v-if="question.questionType === questionType.text" v-model="question.trueAnswer" disabled>
         </div>
         <br/>
     </div>
@@ -110,7 +124,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" v-if="modalQuestion.index == -1">Новый вопрос</h5>
+                    <h5 class="modal-title" v-if="modalQuestion.index !== -1">Редактирование вопроса</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -122,7 +137,7 @@
                     <div>
                         <p>Варианты ответа</p>
                         <div v-for="(answer, index) in modalQuestion.answers">
-                            {{ answer.text }}
+                            {{ answer }}
                         </div>
                         <div v-if="isAddNewAnswer">
                             <input type="text" v-model="newAnswer">
@@ -135,7 +150,9 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" v-on:click="saveNewQuestion()">Save changes</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                            v-on:click="saveNewQuestion()">Save changes
+                    </button>
                 </div>
             </div>
         </div>
