--- a/create.html
+++ b/create.html
@@ -155,11 +155,23 @@
                         Правильный ответ
                         <input type="text" v-model="modalQuestion.trueAnswer">
                     </dif>
-                    <div v-if="modalQuestion.questionType == questionType.radio">
+                    <div v-if="(modalQuestion.questionType == questionType.radio) || (modalQuestion.questionType == questionType.check)">
                         <p>Варианты ответа</p>
-                        <div v-for="(answer, index) in modalQuestion.answers">
-                            {{ answer }}
+
+                        <div v-for="answer in modalQuestion.answers" v-if="modalQuestion.questionType == questionType.radio">
+                            <input class="form-check-input" type="radio" :checked="answer == modalQuestion.trueAnswer">
+                            <label class="form-check-label">
+                                {{ answer }}
+                            </label>
                         </div>
+
+                        <div v-for="answer in modalQuestion.answers" v-if="modalQuestion.questionType == questionType.check">
+                            <input class="form-check-input" type="checkbox" :checked="answer == modalQuestion.trueAnswer">
+                            <label class="form-check-label">
+                                {{ answer }}
+                            </label>
+                        </div>
+
                         <div v-if="isAddNewAnswer">
                             <input type="text" v-model="newAnswer">
                             <button class="btn btn-primary" v-on:click="saveNewAnswer()">Сохранить</button>
