--- a/create.html
+++ b/create.html
@@ -159,7 +159,7 @@
                         <p>Варианты ответа</p>
 
                         <div v-for="answer in modalQuestion.answers" v-if="modalQuestion.questionType == questionType.radio">
-                            <input class="form-check-input" type="radio" :checked="answer == modalQuestion.trueAnswer">
+                            <input class="form-check-input" type="radio" v-bind:value="answer" v-model="modalQuestion.trueAnswer">
                             <label class="form-check-label">
                                 {{ answer }}
                             </label>
