--- a/create.html
+++ b/create.html
@@ -83,15 +83,15 @@
 
         <div class="form-check">
             <div v-for="answer in question.answers" v-if="question.questionType == questionType.radio">
-                <input class="form-check-input" type="radio" disabled :checked="answer == question.trueAnswer">
+                <input class="form-check-input" type="radio" disabled :value="answer" v-model="question.trueAnswer">
                 <label class="form-check-label">
                     {{ answer }}
                 </label>
             </div>
 
             <div v-for="answer in question.answers" v-if="question.questionType == questionType.check">
-                <input class="form-check-input" type="checkbox" disabled
-                       :checked="question.trueAnswer.indexOf(answer) !== -1">
+                <input class="form-check-input" type="checkbox" disabled :value="answer"
+                       v-model="question.trueAnswers">
                 <label class="form-check-label">
                     {{ answer }}
                 </label>
@@ -166,7 +166,7 @@
                         </div>
 
                         <div v-for="answer in modalQuestion.answers" v-if="modalQuestion.questionType == questionType.check">
-                            <input class="form-check-input" type="checkbox" :checked="answer == modalQuestion.trueAnswer">
+                            <input class="form-check-input" type="checkbox" :value="answer" v-model="modalQuestion.trueAnswers">
                             <label class="form-check-label">
                                 {{ answer }}
                             </label>
