--- a/create.html
+++ b/create.html
@@ -113,7 +113,7 @@
         Добавить вопрос
     </button>
 
-    <button class="btn btn-primary">
+    <button class="btn btn-primary" v-on:click="generateCode()">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear"
              viewBox="0 0 16 16">
             <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
@@ -121,6 +121,14 @@
         </svg>&nbsp;&nbsp;
         Сгенерировать код
     </button>
+
+    <br />
+    <div class="form-floating" v-if="codeVisible">
+        <br />
+        <textarea class="form-control" rows="10">
+            {{ code }}
+        </textarea>
+    </div>
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
