--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <h1>5-й класс обществознание</h1>
     <ul class="list-unstyled">
         <li><a href="/tester/run.html">Пример теста - президенты</a></li>
+        <li><a href="/tester/greece.html">Древняя Греция</a></li>
     </ul>
 </main>
 
