--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <ul class="list-unstyled">
         <li><a href="/tester/run.html">Пример теста - президенты</a></li>
         <li><a href="/tester/greece.html">Древняя Греция</a></li>
+        <li><a href="/tester/peter_one.html">Правление Петра I</li>
     </ul>
 </main>
 
