--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </nav>
 
 <main class="container" id="app">
-    <h1>5-й класс обществознание</h1>
+    <h1>История Древнего мира</h1>
     <ul class="list-unstyled">
         <li><a href="/tester/run.html">Пример теста - президенты</a></li>
         <li><a href="/tester/greece.html">Древняя Греция</a></li>
