--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <main class="container" id="app">
     <h1>История Древнего мира</h1>
     <ul class="list-unstyled">
-        <li><a href="/tester/run.html">Пример теста - президенты</a></li>
+        <li><a href="/tester/run.html">Древний Египет</a></li>
         <li><a href="/tester/greece.html">Древняя Греция</a></li>
         <li><a href="/tester/peter_one.html">Правление Петра I</li>
     </ul>
