--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a href="/tester/run.html">Древний Египет</a></li>
         <li><a href="/tester/greece.html">Древняя Греция</a></li>
    <h1>История России XVIII век</h1>
-        <li><a href="/tester/peter_one.html">Правление Петра I</li>
+        <li><a href="/tester/peter_one.html">Правление Петра I</a></li>
     <h1>Обществознание 8 класс</h1>
     </ul>
 </main>
